--- a/composer.json
+++ b/composer.json
@@ -75,5 +75,11 @@
         "optimize-autoloader": true
     },
     "minimum-stability" : "dev",
-    "prefer-stable" : true
+    "prefer-stable" : true,
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://packagist.phpcomposer.com"
+        }
+    }
 }
